add user services for admin and ordinary user
